made new files to get heroku app deployment, changed a few colors in css page, fixed spacing within index.handlebars

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,11 +6,13 @@ body {
 }
 
 .jumbotron {
-    background-image: url("/public/img/dinnerburger.jpg");
+    background-color: #7c8494;
+    background-image: url("public/img/dinnerburger.jpg");
     background-repeat: no-repeat;
     background-position: right;
     background-size: contain;
     margin-top: 10px;
+    border: 5px ;
 }
 
 .jumbotron > h1 {
@@ -48,7 +50,7 @@ p#color-override {
 }
 
 #righthead {
-    background-color: #f0ad4e;
+    background-color: #c44444;
     color: white;
     text-align: center;
     font-size: 1.2em;
